Enhance README with project overview and instructions.

--- a/operations_research.ipynb
+++ b/operations_research.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "523bc134",
    "metadata": {},
    "outputs": [
@@ -161,18 +161,11 @@
      "output_type": "stream",
      "text": [
       "Setting up OR-Tools solver...\n",
-      "Solver: SCIP 10.0.0 [LP solver: SoPlex 8.0.0]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Solver' has no attribute 'SupportedSolvers'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m     solver = pywraplp.Solver.CreateSolver(\u001b[33m'\u001b[39m\u001b[33mCBC\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSolver: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msolver.SolverVersion()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAvailable solvers: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mpywraplp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSolver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mSupportedSolvers\u001b[49m()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Create decision variables: x[mechanic, base, group, shift]\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# x[m, b, g, s] = 1 if mechanic m is assigned to base b in group g with shift s\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m# x[m, b, g, s] = 0 otherwise\u001b[39;00m\n\u001b[32m     18\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mCreating decision variables...\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: type object 'Solver' has no attribute 'SupportedSolvers'"
+      "Solver: SCIP 10.0.0 [LP solver: SoPlex 8.0.0]\n",
+      "\n",
+      "Creating decision variables...\n",
+      "Created 588 binary decision variables\n",
+      "Sample variable: x_m1_b1_g1_s1\n"
      ]
     }
    ],
@@ -209,10 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2557766c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding first constraint: Each mechanic ≤ 1 assignment...\n",
+      "Added 49 constraints (one per mechanic)\n",
+      "Total constraints so far: 49\n"
+     ]
+    }
+   ],
    "source": [
     "# Constraint 1: Each mechanic can work in at most one shift, one group, and one base\n",
     "# Σ(b∈Bases) Σ(g∈Groups) Σ(s∈Shifts) x[m, b, g, s] ≤ 1  ∀m ∈ Mechanics\n",
@@ -234,10 +237,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "37a6b8e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding skill coverage constraints...\n",
+      "Added 66 skill coverage constraints\n",
+      "Total constraints: 115\n"
+     ]
+    }
+   ],
    "source": [
     "# Constraint 2: Skill Coverage Constraint\n",
     "# For each (base, period, shift) combination, the pool of assigned mechanics must \n",
@@ -296,10 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "deedede4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating objective function...\n",
+      "Objective function created: Minimize total movement cost\n",
+      "Number of variables in objective: 588\n",
+      "Model summary:\n",
+      "  Variables: 588\n",
+      "  Constraints: 115\n"
+     ]
+    }
+   ],
    "source": [
     "# Objective Function: Minimize total cost of moving mechanics to bases\n",
     "# Minimize: Σ(m∈Mechanics) Σ(b∈Bases) Σ(g∈Groups) Σ(s∈Shifts) cost[m, b] * x[m, b, g, s]\n",
@@ -327,10 +353,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "52446a08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving the optimization problem...\n",
+      "This may take a few moments...\n",
+      "\n",
+      "✓ Optimal solution found!\n",
+      "\n",
+      "Optimal total cost: 303.00\n",
+      "\n",
+      "Mechanic Assignments:\n",
+      "--------------------------------------------------------------------------------\n",
+      "Mechanic   Base     Group    Shift    Cost      \n",
+      "--------------------------------------------------------------------------------\n",
+      "1          1        1        Day      18.00     \n",
+      "3          1        1        Day      27.00     \n",
+      "4          2        2        Day      0.00      \n",
+      "5          2        1        Day      25.00     \n",
+      "7          3        1        Day      21.00     \n",
+      "9          2        2        Night    11.00     \n",
+      "10         2        2        Night    35.00     \n",
+      "17         1        2        Day      1.00      \n",
+      "21         3        2        Day      11.00     \n",
+      "22         1        2        Day      5.00      \n",
+      "25         2        1        Night    1.00      \n",
+      "28         3        1        Day      3.00      \n",
+      "29         1        2        Night    11.00     \n",
+      "30         3        1        Night    3.00      \n",
+      "32         3        2        Day      25.00     \n",
+      "33         1        1        Night    0.00      \n",
+      "34         2        2        Day      4.00      \n",
+      "35         1        1        Night    3.00      \n",
+      "38         2        2        Day      18.00     \n",
+      "40         2        2        Day      18.00     \n",
+      "42         3        2        Night    11.00     \n",
+      "43         1        2        Night    25.00     \n",
+      "44         3        2        Night    13.00     \n",
+      "49         3        1        Night    14.00     \n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Total assignments: 24\n",
+      "Total cost: 303.00\n",
+      "\n",
+      "Unassigned mechanics: 25\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve the optimization problem\n",
     "print(\"Solving the optimization problem...\")\n",
