Restructured the data into folders for organization.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f5fc1dac",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
     "print(\"Loading data files...\")\n",
     "\n",
     "# Load mechanic skills dataset\n",
-    "mechanic_skills_df = pd.read_excel('mechanic_skills_dataset.xlsx')\n",
+    "mechanic_skills_df = pd.read_excel('../data/mechanic_skills_dataset.xlsx')\n",
     "print(\"\\nMechanic Skills Dataset:\")\n",
     "print(mechanic_skills_df.head())\n",
     "print(f\"\\nShape: {mechanic_skills_df.shape}\")\n",
@@ -100,7 +100,7 @@
     "print(f\"Number of mechanics: {len(mechanics)}\")\n",
     "\n",
     "# Load base aircraft schedule\n",
-    "base_schedule_df = pd.read_excel('base_aircraft_schedule.xlsx')\n",
+    "base_schedule_df = pd.read_excel('../data/base_aircraft_schedule.xlsx')\n",
     "print(\"\\n\\nBase Aircraft Schedule:\")\n",
     "print(base_schedule_df.head())\n",
     "print(f\"\\nShape: {base_schedule_df.shape}\")\n",
@@ -119,7 +119,7 @@
     "print(f\"Shifts: {shifts} (1=day, 2=night)\")\n",
     "\n",
     "# Load cost matrix\n",
-    "cost_matrix_df = pd.read_excel('cost_matrix.xlsx')\n",
+    "cost_matrix_df = pd.read_excel('../data/cost_matrix.xlsx')\n",
     "print(\"\\n\\nCost Matrix:\")\n",
     "print(cost_matrix_df.head())\n",
     "print(f\"\\nShape: {cost_matrix_df.shape}\")\n",
