Added multi-inspector Contraint.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -147,12 +147,24 @@
     "print(f\"Mechanics in skills dataset: {len(mechanics)}\")\n",
     "print(f\"Mechanics in cost matrix: {len(cost_matrix_df)}\")\n",
     "print(f\"Bases in schedule: {bases}\")\n",
-    "print(f\"Bases in cost matrix: {list(base_column_mapping.values())}\")"
+    "print(f\"Bases in cost matrix: {list(base_column_mapping.values())}\")\n",
+    "\n",
+    "# Check for inspector skill columns\n",
+    "inspector_skill_columns = [col for col in mechanic_skills_df.columns if col.endswith('_inspec')]\n",
+    "print(f\"\\nInspector skill columns found: {len(inspector_skill_columns)}\")\n",
+    "if inspector_skill_columns:\n",
+    "    print(f\"  Inspector columns: {inspector_skill_columns[:5]}...\" if len(inspector_skill_columns) > 5 else f\"  Inspector columns: {inspector_skill_columns}\")\n",
+    "\n",
+    "# Check for inspector requirements in base schedule\n",
+    "inspector_req_columns = [col for col in base_schedule_df.columns if col.endswith('_inspec')]\n",
+    "print(f\"Inspector requirement columns in base schedule: {len(inspector_req_columns)}\")\n",
+    "if inspector_req_columns:\n",
+    "    print(f\"  Inspector requirement columns: {inspector_req_columns[:5]}...\" if len(inspector_req_columns) > 5 else f\"  Inspector requirement columns: {inspector_req_columns}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "523bc134",
    "metadata": {},
    "outputs": [
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "2557766c",
    "metadata": {},
    "outputs": [
@@ -237,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "37a6b8e6",
    "metadata": {},
    "outputs": [
@@ -268,14 +280,20 @@
     "\n",
     "# Create a mapping of mechanics to their skills for quick lookup\n",
     "mechanic_skills = {}\n",
+    "mechanic_inspector_skills = {}  # For inspector skills\n",
     "for _, row in mechanic_skills_df.iterrows():\n",
     "    m = int(row['mechanic_id'])\n",
     "    mechanic_skills[m] = {}\n",
+    "    mechanic_inspector_skills[m] = {}\n",
     "    for aircraft in aircraft_types:\n",
     "        for skill in skill_types:\n",
     "            col_name = f\"{aircraft}{skill}\"\n",
     "            if col_name in mechanic_skills_df.columns:\n",
     "                mechanic_skills[m][col_name] = int(row[col_name])\n",
+    "            # Also check for inspector skills\n",
+    "            inspector_col_name = f\"{aircraft}{skill}_inspec\"\n",
+    "            if inspector_col_name in mechanic_skills_df.columns:\n",
+    "                mechanic_inspector_skills[m][inspector_col_name] = int(row[inspector_col_name])\n",
     "\n",
     "constraint_count = 0\n",
     "\n",
@@ -309,7 +327,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "c17200b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constraint 3: Inspector Coverage Constraint\n",
+    "# For each (base, period, shift) combination, if an inspector skill is required,\n",
+    "# the pool of assigned mechanics must include at least one mechanic with that inspector skill\n",
+    "# For each inspector requirement column in base_schedule_df:\n",
+    "#   If value > 0 at (b, p, s), then:\n",
+    "#     Σ(m ∈ Mechanics with inspector skill) x[m, b, p, s] ≥ 1\n",
+    "\n",
+    "print(\"Adding inspector coverage constraints...\")\n",
+    "\n",
+    "inspector_constraint_count = 0\n",
+    "\n",
+    "# Get all inspector requirement columns from base schedule\n",
+    "inspector_req_columns = [col for col in base_schedule_df.columns if col.endswith('_inspec')]\n",
+    "\n",
+    "if inspector_req_columns:\n",
+    "    # Iterate through each row in base_aircraft_schedule\n",
+    "    for _, row in base_schedule_df.iterrows():\n",
+    "        base_id = int(row['base_id'])\n",
+    "        period = int(row['period'])\n",
+    "        shift = int(row['shift'])\n",
+    "        \n",
+    "        # Check each inspector requirement column\n",
+    "        for inspector_col in inspector_req_columns:\n",
+    "            if inspector_col in base_schedule_df.columns:\n",
+    "                inspector_required = row[inspector_col]\n",
+    "                # Check if inspector is required (value > 0)\n",
+    "                if pd.notna(inspector_required) and inspector_required > 0:\n",
+    "                    # Create constraint: at least one mechanic with this inspector skill must be assigned\n",
+    "                    constraint = solver.Constraint(1, solver.infinity(), \n",
+    "                                                  f'inspector_{inspector_col}_base{base_id}_period{period}_shift{shift}')\n",
+    "                    \n",
+    "                    # Find all mechanics with this inspector skill\n",
+    "                    for m in mechanics:\n",
+    "                        if mechanic_inspector_skills[m].get(inspector_col, 0) == 1:\n",
+    "                            constraint.SetCoefficient(x[(m, base_id, period, shift)], 1)\n",
+    "                    \n",
+    "                    inspector_constraint_count += 1\n",
+    "    \n",
+    "    print(f\"Added {inspector_constraint_count} inspector coverage constraints\")\n",
+    "    print(f\"Total constraints: {solver.NumConstraints()}\")\n",
+    "else:\n",
+    "    print(\"No inspector requirement columns found in base schedule. Skipping inspector constraints.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "deedede4",
    "metadata": {},
    "outputs": [
@@ -353,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "52446a08",
    "metadata": {},
    "outputs": [
@@ -525,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0a2bf212",
    "metadata": {},
    "outputs": [
@@ -598,7 +667,44 @@
     "    if len(skill_violations) > 10:\n",
     "        print(f\"  ... and {len(skill_violations) - 10} more\")\n",
     "\n",
-    "print(f\"\\n✓ Total constraint violations: {len(violations) + len(skill_violations)}\")"
+    "# Verify inspector coverage constraints\n",
+    "inspector_violations = []\n",
+    "inspector_req_columns = [col for col in base_schedule_df.columns if col.endswith('_inspec')]\n",
+    "\n",
+    "if inspector_req_columns:\n",
+    "    for _, row in base_schedule_df.iterrows():\n",
+    "        base_id = int(row['base_id'])\n",
+    "        period = int(row['period'])\n",
+    "        shift = int(row['shift'])\n",
+    "        \n",
+    "        for inspector_col in inspector_req_columns:\n",
+    "            if inspector_col in base_schedule_df.columns:\n",
+    "                inspector_required = row[inspector_col]\n",
+    "                if pd.notna(inspector_required) and inspector_required > 0:\n",
+    "                    # Check if at least one mechanic with this inspector skill is assigned\n",
+    "                    assigned_with_inspector_skill = sum(\n",
+    "                        x[(m, base_id, period, shift)].solution_value()\n",
+    "                        for m in mechanics\n",
+    "                        if mechanic_inspector_skills[m].get(inspector_col, 0) == 1\n",
+    "                    )\n",
+    "                    if assigned_with_inspector_skill < 0.999:  # Should be ≥ 1\n",
+    "                        inspector_violations.append(\n",
+    "                            f\"Base {base_id}, Period {period}, Shift {shift}: \"\n",
+    "                            f\"Missing inspector {inspector_col} (found {assigned_with_inspector_skill})\"\n",
+    "                        )\n",
+    "    \n",
+    "    if not inspector_violations:\n",
+    "        print(\"✓ Constraint 3: All inspector coverage requirements met\")\n",
+    "    else:\n",
+    "        print(\"✗ Inspector coverage violations:\")\n",
+    "        for v in inspector_violations[:10]:  # Show first 10\n",
+    "            print(f\"  {v}\")\n",
+    "        if len(inspector_violations) > 10:\n",
+    "            print(f\"  ... and {len(inspector_violations) - 10} more\")\n",
+    "else:\n",
+    "    print(\"ℹ Constraint 3: No inspector requirements found (skipped)\")\n",
+    "\n",
+    "print(f\"\\n✓ Total constraint violations: {len(violations) + len(skill_violations) + len(inspector_violations)}\")"
    ]
   }
  ],
