Added inspector coverage constraints. Added avoidance_list file.

--- a/notebooks/mechanics_roster_optimization_dist_cost.ipynb
+++ b/notebooks/mechanics_roster_optimization_dist_cost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f5fc1dac",
    "metadata": {},
    "outputs": [
@@ -20,28 +20,56 @@
       "3            4         1        1         0        0       0        1   \n",
       "4            5         0        0         1        0       0        0   \n",
       "\n",
-      "   sk92_af  sk92_r  sk92_av  \n",
-      "0        1       1        0  \n",
-      "1        0       0        1  \n",
-      "2        0       0        0  \n",
-      "3        0       0        0  \n",
-      "4        1       1        1  \n",
+      "   sk92_af  sk92_r  sk92_av  aw139_af_inspec  aw139_r_inspec  aw139_av_inspec  \\\n",
+      "0        1       1        0                1               1                0   \n",
+      "1        0       0        1                0               0                0   \n",
+      "2        0       0        0                0               0                0   \n",
+      "3        0       0        0                0               1                0   \n",
+      "4        1       1        1                0               0                1   \n",
       "\n",
-      "Shape: (49, 10)\n",
+      "   h175_af_inspec  h175_r_inspec  h175_av_inspec  sk92_af_inspec  \\\n",
+      "0               0              0               0               1   \n",
+      "1               0              0               1               0   \n",
+      "2               1              1               1               0   \n",
+      "3               0              0               0               0   \n",
+      "4               0              0               0               1   \n",
+      "\n",
+      "   sk92_r_inspec  sk92_av_inspec  \n",
+      "0              1               0  \n",
+      "1              0               0  \n",
+      "2              0               0  \n",
+      "3              0               0  \n",
+      "4              1               0  \n",
+      "\n",
+      "Shape: (49, 19)\n",
       "\n",
       "Mechanics: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]\n",
       "Number of mechanics: 49\n",
       "\n",
       "\n",
       "Base Aircraft Schedule:\n",
-      "   base_id  aw139  h175  sk92  period  shift\n",
-      "0        1      1     1     0       1      1\n",
-      "1        1      1     1     0       1      2\n",
-      "2        1      1     1     0       2      1\n",
-      "3        1      1     1     0       2      2\n",
-      "4        2      0     0     1       1      1\n",
+      "   base_id  aw139  h175  sk92  period  shift  aw139_af_inspec  aw139_r_inspec  \\\n",
+      "0        1      1     1     0       1      1                0               1   \n",
+      "1        1      1     1     0       1      2                0               0   \n",
+      "2        1      1     1     0       2      1                0               0   \n",
+      "3        1      1     1     0       2      2                0               0   \n",
+      "4        2      0     0     1       1      1                0               0   \n",
       "\n",
-      "Shape: (12, 6)\n",
+      "   aw139_av_inspec  h175_af_inspec  h175_r_inspec  h175_av_inspec  \\\n",
+      "0                0               1              1               1   \n",
+      "1                1               0              0               1   \n",
+      "2                0               0              0               1   \n",
+      "3                1               1              0               1   \n",
+      "4                0               0              0               0   \n",
+      "\n",
+      "   sk92_af_inspec  sk92_r_inspec  sk92_av_inspec  \n",
+      "0               0              0               0  \n",
+      "1               0              0               0  \n",
+      "2               0              0               0  \n",
+      "3               0              0               0  \n",
+      "4               0              0               0  \n",
+      "\n",
+      "Shape: (12, 15)\n",
       "\n",
       "Bases: [1, 2, 3]\n",
       "Number of bases: 3\n",
@@ -75,7 +103,12 @@
       "Mechanics in skills dataset: 49\n",
       "Mechanics in cost matrix: 49\n",
       "Bases in schedule: [1, 2, 3]\n",
-      "Bases in cost matrix: [1, 2, 3]\n"
+      "Bases in cost matrix: [1, 2, 3]\n",
+      "\n",
+      "Inspector skill columns found: 9\n",
+      "  Inspector columns: ['aw139_af_inspec', 'aw139_r_inspec', 'aw139_av_inspec', 'h175_af_inspec', 'h175_r_inspec']...\n",
+      "Inspector requirement columns in base schedule: 9\n",
+      "  Inspector requirement columns: ['aw139_af_inspec', 'aw139_r_inspec', 'aw139_av_inspec', 'h175_af_inspec', 'h175_r_inspec']...\n"
      ]
     }
    ],
@@ -164,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "523bc134",
    "metadata": {},
    "outputs": [
@@ -214,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "2557766c",
    "metadata": {},
    "outputs": [
@@ -249,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "37a6b8e6",
    "metadata": {},
    "outputs": [
@@ -327,10 +360,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c17200b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding inspector coverage constraints...\n",
+      "Added 21 inspector coverage constraints\n",
+      "Total constraints: 136\n"
+     ]
+    }
+   ],
    "source": [
     "# Constraint 3: Inspector Coverage Constraint\n",
     "# For each (base, period, shift) combination, if an inspector skill is required,\n",
@@ -378,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "deedede4",
    "metadata": {},
    "outputs": [
@@ -391,7 +434,7 @@
       "Number of variables in objective: 588\n",
       "Model summary:\n",
       "  Variables: 588\n",
-      "  Constraints: 115\n"
+      "  Constraints: 136\n"
      ]
     }
    ],
@@ -422,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "52446a08",
    "metadata": {},
    "outputs": [
@@ -435,42 +478,45 @@
       "\n",
       "✓ Optimal solution found!\n",
       "\n",
-      "Optimal total cost: 303.00\n",
+      "Optimal total cost: 389.00\n",
       "\n",
       "Mechanic Assignments:\n",
       "--------------------------------------------------------------------------------\n",
       "Mechanic   Base     Group    Shift    Cost      \n",
       "--------------------------------------------------------------------------------\n",
       "1          1        1        Day      18.00     \n",
+      "2          3        2        Night    10.00     \n",
       "3          1        1        Day      27.00     \n",
       "4          2        2        Day      0.00      \n",
-      "5          2        1        Day      25.00     \n",
+      "5          3        2        Day      18.00     \n",
       "7          3        1        Day      21.00     \n",
-      "9          2        2        Night    11.00     \n",
-      "10         2        2        Night    35.00     \n",
-      "17         1        2        Day      1.00      \n",
+      "9          2        2        Day      11.00     \n",
+      "10         2        2        Day      35.00     \n",
+      "16         2        1        Night    31.00     \n",
+      "17         1        2        Night    1.00      \n",
+      "19         1        2        Night    18.00     \n",
       "21         3        2        Day      11.00     \n",
-      "22         1        2        Day      5.00      \n",
-      "25         2        1        Night    1.00      \n",
-      "28         3        1        Day      3.00      \n",
-      "29         1        2        Night    11.00     \n",
-      "30         3        1        Night    3.00      \n",
-      "32         3        2        Day      25.00     \n",
+      "22         2        2        Night    19.00     \n",
+      "25         2        1        Day      1.00      \n",
+      "26         1        2        Night    42.00     \n",
+      "28         3        2        Night    3.00      \n",
+      "29         1        2        Day      11.00     \n",
+      "30         3        1        Day      3.00      \n",
       "33         1        1        Night    0.00      \n",
-      "34         2        2        Day      4.00      \n",
+      "34         2        1        Night    4.00      \n",
       "35         1        1        Night    3.00      \n",
-      "38         2        2        Day      18.00     \n",
-      "40         2        2        Day      18.00     \n",
-      "42         3        2        Night    11.00     \n",
-      "43         1        2        Night    25.00     \n",
-      "44         3        2        Night    13.00     \n",
-      "49         3        1        Night    14.00     \n",
+      "38         3        1        Night    17.00     \n",
+      "40         2        1        Night    18.00     \n",
+      "42         2        2        Night    15.00     \n",
+      "43         1        2        Day      25.00     \n",
+      "44         3        1        Night    13.00     \n",
+      "49         3        2        Night    14.00     \n",
       "--------------------------------------------------------------------------------\n",
       "\n",
-      "Total assignments: 24\n",
-      "Total cost: 303.00\n",
+      "Total assignments: 27\n",
+      "Total cost: 389.00\n",
       "\n",
-      "Unassigned mechanics: 25\n"
+      "Unassigned mechanics: 22\n"
      ]
     }
    ],
@@ -530,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "a3f4b986",
    "metadata": {},
    "outputs": [
@@ -543,15 +589,15 @@
       "OPTIMALITY VERIFICATION\n",
       "================================================================================\n",
       "✓ Solver Status: OPTIMAL\n",
-      "✓ Objective Value: 303.00\n",
-      "✓ Best Bound (Lower Bound): 303.00\n",
+      "✓ Objective Value: 389.00\n",
+      "✓ Best Bound (Lower Bound): 389.00\n",
       "✓ Optimality Gap: 0.000000 (0.000000%)\n",
       "✓ Gap is essentially zero - solution is proven optimal!\n",
       "\n",
       "Solver Statistics:\n",
-      "  Wall time: 2277503.00 ms\n",
-      "  Iterations: 549\n",
-      "  Nodes: 1\n"
+      "  Wall time: 71018.00 ms\n",
+      "  Iterations: 4453\n",
+      "  Nodes: 4\n"
      ]
     }
    ],
@@ -594,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0a2bf212",
    "metadata": {},
    "outputs": [
@@ -608,6 +654,7 @@
       "================================================================================\n",
       "✓ Constraint 1: All mechanics have ≤ 1 assignment\n",
       "✓ Constraint 2: All skill coverage requirements met\n",
+      "✓ Constraint 3: All inspector coverage requirements met\n",
       "\n",
       "✓ Total constraint violations: 0\n"
      ]
